--- a/total.html
+++ b/total.html
@@ -1,214 +1,219 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>產品試算器（多 Partner）</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3/dist/cdn.min.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>產品試算器（多 Partner）</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3/dist/cdn.min.js"></script>
 </head>
+
 <body x-data="productApp()" x-init="init(); loadData()">
 
-  <div class="container my-5">
-    <h2 class="text-center mb-4">產品試算器（多 Partner 加總）</h2>
+    <div class="container my-5">
+        <h2 class="text-center mb-4">產品試算器（多 Partner 加總）</h2>
 
-    <div class="row mb-3 g-2">
-      <div class="col-auto">
-        <!-- 日期選單 -->
-        <select x-model="selectedDate" @change="loadData()"
-                class="form-select">
-          <template x-for="d in dates" :key="d">
-            <option :value="d" x-text="d"></option>
-          </template>
-        </select>
-      </div>
-      <div class="col-auto">
-        <!-- Partner 多選 -->
-        <select x-model="selectedPartners" @change="loadData()"
-                multiple size="4"
-                class="form-select">
-          <template x-for="p in partnerOptions" :key="p">
-            <option :value="p" x-text="p"></option>
-          </template>
-        </select>
-      </div>
-      <div class="col-auto d-flex align-items-center">
-        <button class="btn btn-outline-secondary"
-                @click="showOnlyWithCount = !showOnlyWithCount">
-          <span x-text="showOnlyWithCount ? '顯示全部' : '只看有數量'"></span>
-        </button>
-      </div>
+        <div class="row mb-3 g-2">
+            <div class="col-auto">
+                <!-- 日期選單 -->
+                <select x-model="selectedDate" @change="loadData()" class="form-select">
+                    <template x-for="d in dates" :key="d">
+                        <option :value="d" x-text="d"></option>
+                    </template>
+                </select>
+            </div>
+            <div class="col-auto">
+                <!-- Partner 多選 -->
+                <template x-for="p in partnerOptions" :key="p">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="partner" :id="`radio-${p}`" :value="p"
+                            x-model="selectedPartner" @change="loadData()" />
+                        <label class="form-check-label" :for="`radio-${p}`" x-text="p"></label>
+                    </div>
+                </template>
+            </div>
+            <div class="col-auto d-flex align-items-center">
+                <button class="btn btn-outline-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
+                    <span x-text="showOnlyWithCount ? '顯示全部' : '只看有數量'"></span>
+                </button>
+            </div>
+        </div>
+
+        <!-- 餅類 -->
+        <h4>餅類</h4>
+        <table class="table table-bordered text-center">
+            <thead class="table-light">
+                <tr>
+                    <th>勾選</th>
+                    <th>品名</th>
+                    <th>單價</th>
+                    <th>數量</th>
+                    <th>小計</th>
+                </tr>
+            </thead>
+            <tbody>
+                <template x-for="item in otherItems()" :key="item.product_name">
+                    <tr x-show="!showOnlyWithCount || item.count>0">
+                        <td><input type="checkbox" x-model="item.checked"></td>
+                        <td x-text="item.product_name"></td>
+                        <td x-text="item.price"></td>
+                        <td>
+                            <input type="number" class="form-control form-control-sm" x-model.number="item.count"
+                                @input="update(item)" min="0">
+                        </td>
+                        <td x-text="item.total.toFixed(2)"></td>
+                    </tr>
+                </template>
+            </tbody>
+            <tfoot class="table-secondary">
+                <tr>
+                    <td colspan="4"><strong>餅類小計</strong></td>
+                    <td><strong x-text="calculateOtherGroupsTotal().toFixed(2)"></strong></td>
+                </tr>
+            </tfoot>
+        </table>
+
+        <!-- 零食類 -->
+        <h4>零食類</h4>
+        <table class="table table-bordered text-center">
+            <thead class="table-light">
+                <tr>
+                    <th>勾選</th>
+                    <th>品名</th>
+                    <th>單價</th>
+                    <th>數量</th>
+                    <th>小計</th>
+                </tr>
+            </thead>
+            <tbody>
+                <template x-for="item in group9Items()" :key="item.product_name">
+                    <tr x-show="!showOnlyWithCount || item.count>0">
+                        <td><input type="checkbox" x-model="item.checked"></td>
+                        <td x-text="item.product_name"></td>
+                        <td x-text="item.price"></td>
+                        <td>
+                            <input type="number" class="form-control form-control-sm" x-model.number="item.count"
+                                @input="update(item)" min="0">
+                        </td>
+                        <td x-text="item.total.toFixed(2)"></td>
+                    </tr>
+                </template>
+            </tbody>
+            <tfoot class="table-secondary">
+                <tr>
+                    <td colspan="4"><strong>零食類小計</strong></td>
+                    <td><strong x-text="calculateGroup9Total().toFixed(2)"></strong></td>
+                </tr>
+            </tfoot>
+        </table>
+
+        <!-- 總計 -->
+        <div class="text-end mt-4">
+            <h4>總計：<span x-text="calculateTotal().toFixed(2)"></span></h4>
+        </div>
     </div>
 
-    <!-- 餅類 -->
-    <h4>餅類</h4>
-    <table class="table table-bordered text-center">
-      <thead class="table-light">
-        <tr>
-          <th>勾選</th><th>品名</th><th>單價</th><th>數量</th><th>小計</th>
-        </tr>
-      </thead>
-      <tbody>
-        <template x-for="item in otherItems()" :key="item.product_name">
-          <tr x-show="!showOnlyWithCount || item.count>0">
-            <td><input type="checkbox" x-model="item.checked"></td>
-            <td x-text="item.product_name"></td>
-            <td x-text="item.price"></td>
-            <td>
-              <input type="number" class="form-control form-control-sm"
-                     x-model.number="item.count"
-                     @input="update(item)" min="0">
-            </td>
-            <td x-text="item.total.toFixed(2)"></td>
-          </tr>
-        </template>
-      </tbody>
-      <tfoot class="table-secondary">
-        <tr>
-          <td colspan="4"><strong>餅類小計</strong></td>
-          <td><strong x-text="calculateOtherGroupsTotal().toFixed(2)"></strong></td>
-        </tr>
-      </tfoot>
-    </table>
+    <script>
+        function productApp() {
+            return {
+                // UI state
+                dates: [],                // 今天起往前 6 天
+                selectedDate: '',         // 綁定日期
+                partnerOptions: [],       // 該日所有 partnerId
+                selectedPartners: [],     // 綁定多選結果
+                items: [],                // 試算清單
+                showOnlyWithCount: false,
 
-    <!-- 零食類 -->
-    <h4>零食類</h4>
-    <table class="table table-bordered text-center">
-      <thead class="table-light">
-        <tr>
-          <th>勾選</th><th>品名</th><th>單價</th><th>數量</th><th>小計</th>
-        </tr>
-      </thead>
-      <tbody>
-        <template x-for="item in group9Items()" :key="item.product_name">
-          <tr x-show="!showOnlyWithCount || item.count>0">
-            <td><input type="checkbox" x-model="item.checked"></td>
-            <td x-text="item.product_name"></td>
-            <td x-text="item.price"></td>
-            <td>
-              <input type="number" class="form-control form-control-sm"
-                     x-model.number="item.count"
-                     @input="update(item)" min="0">
-            </td>
-            <td x-text="item.total.toFixed(2)"></td>
-          </tr>
-        </template>
-      </tbody>
-      <tfoot class="table-secondary">
-        <tr>
-          <td colspan="4"><strong>零食類小計</strong></td>
-          <td><strong x-text="calculateGroup9Total().toFixed(2)"></strong></td>
-        </tr>
-      </tfoot>
-    </table>
+                // 1. 產生日期下拉
+                init() {
+                    const today = new Date();
+                    this.dates = Array.from({ length: 7 }, (_, i) => {
+                        const d = new Date(today);
+                        d.setDate(today.getDate() - i);
+                        return d.toLocaleDateString('zh-Hant');
+                    });
+                    this.selectedDate = this.dates[0];
+                },
 
-    <!-- 總計 -->
-    <div class="text-end mt-4">
-      <h4>總計：<span x-text="calculateTotal().toFixed(2)"></span></h4>
-    </div>
-  </div>
+                // 2. 載入並聚合
+                async loadData() {
+                    if (!this.selectedDate) return;
+                    try {
+                        // 拿所有訂單
+                        const res = await fetch('/.netlify/functions/getData');
+                        if (!res.ok) throw new Error(res.statusText);
+                        const { orders } = await res.json();
 
-  <script>
-    function productApp() {
-      return {
-        // UI state
-        dates: [],                // 今天起往後 6 天
-        selectedDate: '',         // 綁定日期
-        partnerOptions: [],       // 該日所有 partnerId
-        selectedPartners: [],     // 綁定多選結果
-        items: [],                // 試算清單
-        showOnlyWithCount: false,
+                        // 過濾出該日訂單
+                        const todayOrders = orders.filter(o => o.date === this.selectedDate);
 
-        // 1. 產生日期下拉
-        init() {
-          const today = new Date();
-          this.dates = Array.from({length:7},(_,i)=>{
-            const d = new Date(today);
-            d.setDate(today.getDate()-i);
-            return d.toLocaleDateString('zh-Hant');
-          });
-          this.selectedDate = this.dates[0];
-        },
+                        // 抽 partner 清單 & 預設全選
+                        this.partnerOptions = [...new Set(todayOrders.map(o => o.partnerId))];
+                        this.selectedPartners = [...this.partnerOptions];
 
-        // 2. 載入並聚合
-        async loadData() {
-          if (!this.selectedDate) return;
-          try {
-            // 拿所有訂單
-            const res = await fetch('/.netlify/functions/getData');
-            if (!res.ok) throw new Error(res.statusText);
-            const { orders } = await res.json();
+                        // 聚合所有選中 partner 的 items
+                        const agg = {};
+                        todayOrders
+                            .filter(o => this.selectedPartners.includes(o.partnerId))
+                            .forEach(o => {
+                                Object.entries(o.items).forEach(([name, { count, checked }]) => {
+                                    if (checked) {                      // 只對已勾選的項目做累加
+                                        agg[name] = (agg[name] || 0) + (count || 0);
+                                    }
+                                });
+                            });
+                        // 再從 non_pickup.json 拿 metadata
+                        const prodRes = await fetch('non_pickup.json');
+                        const products = await prodRes.json();
 
-            // 過濾出該日訂單
-            const todayOrders = orders.filter(o=>o.date===this.selectedDate);
+                        // 結合 metadata + 聚合數量
+                        this.items = products.map(p => {
+                            const cnt = agg[p.product_name] || 0;
+                            return {
+                                ...p,
+                                count: cnt,
+                                checked: cnt > 0,
+                                total: cnt * p.price
+                            };
+                        });
+                    } catch (e) {
+                        console.error('載入失敗', e);
+                    }
+                },
 
-            // 抽 partner 清單 & 預設全選
-            this.partnerOptions = [...new Set(todayOrders.map(o=>o.partnerId))];
-            this.selectedPartners = [...this.partnerOptions];
+                update(item) {
+                    item.total = (item.count || 0) * item.price;
+                },
 
-            // 聚合所有選中 partner 的 items
-            const agg = {};
-            todayOrders
-              .filter(o=> this.selectedPartners.includes(o.partnerId))
-              .forEach(o=>{
-                Object.entries(o.items).forEach(([name,{count,checked}])=>{
-                  agg[name] = (agg[name]||0) + (count||0);
-                });
-              });
+                // 分組、計算小計
+                group9Items() {
+                    return this.items.filter(i => i.product_group === 9);
+                },
+                otherItems() {
+                    return this.items.filter(i => i.product_group !== 9);
+                },
+                calculateGroup9Total() {
+                    return this.group9Items().reduce((s, i) => s + (i.checked && i.count > 0 ? i.total : 0), 0);
+                },
+                calculateOtherGroupsTotal() {
+                    return this.otherItems().reduce((s, i) => s + (i.checked && i.count > 0 ? i.total : 0), 0);
+                },
+                calculateTotal() {
+                    return this.calculateGroup9Total() + this.calculateOtherGroupsTotal();
+                },
 
-            // 再從 non_pickup.json 拿 metadata
-            const prodRes = await fetch('non_pickup.json');
-            const products = await prodRes.json();
-
-            // 結合 metadata + 聚合數量
-            this.items = products.map(p=>{
-              const cnt = agg[p.product_name]||0;
-              return {
-                ...p,
-                count: cnt,
-                checked: cnt>0,
-                total: cnt*p.price
-              };
-            });
-          } catch(e) {
-            console.error('載入失敗',e);
-          }
-        },
-
-        update(item) {
-          item.total = (item.count||0)*item.price;
-        },
-
-        // 分組、計算小計
-        group9Items() {
-          return this.items.filter(i=>i.product_group===9);
-        },
-        otherItems() {
-          return this.items.filter(i=>i.product_group!==9);
-        },
-        calculateGroup9Total() {
-          return this.group9Items().reduce((s,i)=> s+(i.checked&&i.count>0?i.total:0),0);
-        },
-        calculateOtherGroupsTotal() {
-          return this.otherItems().reduce((s,i)=> s+(i.checked&&i.count>0?i.total:0),0);
-        },
-        calculateTotal() {
-          return this.calculateGroup9Total()+this.calculateOtherGroupsTotal();
-        },
-
-        // 全選／取消全選
-        isAllChecked() {
-          return this.items.length>0 && this.items.every(i=>i.checked);
-        },
-        toggleSelectAll() {
-          const st = !this.isAllChecked();
-          this.items.forEach(i=>i.checked=st);
+                // 全選／取消全選
+                isAllChecked() {
+                    return this.items.length > 0 && this.items.every(i => i.checked);
+                },
+                toggleSelectAll() {
+                    const st = !this.isAllChecked();
+                    this.items.forEach(i => i.checked = st);
+                }
+            }
         }
-      }
-    }
-  </script>
+    </script>
 </body>
+
 </html>
